--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.22"
@@ -15,5 +16,6 @@
     "@vitejs/plugin-vue": "^5.0.0",
     "gh-pages": "^6.3.0",
     "vite": "^5.2.0"
-  }
+  },
+  "homepage": "https://lapshinnn.github.io/todo-app"
 }
